--- a/views/index.pug
+++ b/views/index.pug
@@ -22,6 +22,6 @@ block content
       each project in projects
         .cell
           a(href= `project/${project.id}`)
-            img.thumbnail(src='https://placehold.it/550x550')
+            img.thumbnail(src=`${project.image_urls[0]}`)
             h5.thumbnail-title #{project.project_name}
 
