--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,15 +14,15 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src='/static/images/profilepic.png')
           .cell.auto
 
             //- Add your name here.
-            h5 Name
+            h5 Juan Zinser
 
             //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | Description
+              | I'm from Mexico
 
             //- Add about page route to the href below. 
             a(href='') Learn More →
