--- a/views/about.pug
+++ b/views/about.pug
@@ -36,11 +36,11 @@ block content
         //- Add your own contact info
         ul
           li 555-555-1234
-          li email@email.com
+          li juanzinser@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
+        a.button.expanded(href='github.com/jwzinser') LinkedIn
+        a.button.expanded(href='github.com/jwzinser') GitHub
         a.button.expanded(href='') Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
