--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='/static/images/profilepic.png')
+            img.thumbnail(src='/static/images/correct_size/profilepic.png')
           .cell.auto
 
             //- Add your name here.
@@ -25,7 +25,7 @@ html(class="no-js" lang="en" dir="ltr")
               | I'm from Mexico
 
             //- Add about page route to the href below. 
-            a(href='') Learn More →
+            a(href='about/') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
