--- a/views/layout2.pug
+++ b/views/layout2.pug
@@ -37,7 +37,7 @@ html(class="no-js" lang="en" dir="ltr")
           //- Add your name here.  This is for the mobile screen sized version.
           span.title-bar-title Name
       block content
-        
+      block content2
 
       
   script(src='/static/js/vendor/jquery.js')
