adds error bkcolor

--- a/views/about.pug
+++ b/views/about.pug
@@ -27,7 +27,7 @@ block content
           li Express
           li Pug
           li Spanish/English/German 
-          
+
         h6 Contact Info
 
         //- Add your own contact info
@@ -36,9 +36,7 @@ block content
           li juanzinser@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='github.com/jwzinser') LinkedIn
-        a.button.expanded(href='github.com/jwzinser') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='http://www.github.com/jwzinser') GitHub
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
